--- a/indexProyectoDWES.html
+++ b/indexProyectoDWES.html
@@ -7,7 +7,11 @@
         <title>Ismael Ferreras García</title>
         <!-- Incluye el CSS de Bootstrap desde un CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href=/208ProyectoDAW/webroot/css/style.css>
+        <style>
+            *{
+                font-size: 14px;
+            }
+        </style>
     </head>
 
     <body>
@@ -39,110 +43,95 @@
             </div>
         </nav>
 
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 1</h2>
-                            <p class="card-text">DESARROLLO WEB EN ENTORNO SERVIDOR</p>
-                            <a href="doc/EstudioTema1.pdf" class="btn btn-primary" target="_blank">Estudio Tema 1</a>
+                            <p class="card-text">TEMA 1 <strong>DESARROLLO WEB EN ENTORNO SERVIDOR</strong></p>
+                            <a href="doc/EstudioTema1.pdf" class="btn btn-primary" target="_blank">Estudio Teorico DWES</a>
+                            <a class="btn btn-primary" target="_blank"> Estudio de CakePHP</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 2</h2>
-                            <p class="card-text">INSTALACIÓN, CONFIGURACIÓN Y DOCUMENTACIÓN DEL ENTORNO DE
-                                DESARROLLO Y DEL ENTORNO DE EXPLOTACIÓN</p>
-                            <a href="doc/EstudioTema2.pdf" class="btn btn-primary" target="_blank">Estudio Tema 2</a>
+                            <p class="card-text">TEMA 2  <strong>INSTALACIÓN, CONFIGURACIÓN Y DOCUMENTACIÓN DEL ENTORNO DE DESARROLLO Y DEL ENTORNO DE EXPLOTACIÓN</strong></p>
+                            <a href="doc/EstudioTema2.pdf" class="btn btn-primary" target="_blank">Documentacion del cliente y servidor</a>
+                            <a  class="btn btn-primary" target="_blank">Estudio de clases y funciones</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 3</h2>
-                            <p class="card-text">CARACTERÍSTICAS DEL LENGUAJE PHP</p>
+                            <p class="card-text">TEMA 3  <strong>CARACTERÍSTICAS DEL LENGUAJE PHP</strong></p>
                             <a href="/208DWESProyectoTema3/indexProyectoTema3.html" class="btn btn-primary">Estudio Tema 3</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 4</h2>
-                            <p class="card-text">TÉCNICAS DE ACCESO A DATOS EN PHP</p>
+                            <p class="card-text">TEMA 4  <strong>TÉCNICAS DE ACCESO A DATOS EN PHP</strong></p>
                             <a href="/208DWESProyectoTema4/indexProyectoTema4.html" class="btn btn-primary">Estudio Tema 4</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 5</h2>
-                            <p class="card-text">DESARROLLO DE APLICACIONES WEB UTILIZANDO
-                                CÓDIGO EMBEBIDO</p>
-
+                            <p class="card-text">TEMA 5  <strong>DESARROLLO DE APLICACIONES WEB UTILIZANDO CÓDIGO EMBEBIDO</strong></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 6</h2>
-                            <p class="card-text">PROGRAMACIÓN ORIENTADA A OBJETOS EN
-                                PHP</p>
-
+                            <p class="card-text">TEMA 6  <strong>PROGRAMACIÓN ORIENTADA A OBJETOS EN PHP</strong></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 7</h2>
-                            <p class="card-text"> PROGRAMACIÓN DE SERVICIOS
-                                WEB</p>
-
+                            <p class="card-text">TEMA 7<strong>PROGRAMACIÓN DE SERVICIOS WEB</strong></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container mt-5 last-div">
+        <div class="container mt-2 last-div">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h2 class="card-title">TEMA 8 y 9</h2>
-                            <p class="card-text">DESARROLLO DE
-                                APLICACIONES WEB HÍBRIDAS</p>
-
+                            <p class="card-text">TEMA 8 y 9 <strong>DESARROLLO DE APLICACIONES WEB HÍBRIDAS</strong></p>
                         </div>
                     </div>
                 </div>
@@ -159,7 +148,7 @@
                         </a>
                     </div>
                     <div class="col text-end">
-                        <a href="indexProyectoTema3.html">
+                        <a href="../index.html">
                             <img src="/webroot/imagenes/casa-removebg-preview.png" alt="Home" width="35" height="35">
                         </a>
                         <a href="https://github.com/IsmaelFG" target="_blank">
@@ -170,5 +159,4 @@
             </div>
         </footer>
     </body>
-
 </html>
