--- a/indexProyectoDWES.html
+++ b/indexProyectoDWES.html
@@ -63,7 +63,7 @@
                         <div class="card-body">
                             <p class="card-text">TEMA 2  <strong>INSTALACIÓN, CONFIGURACIÓN Y DOCUMENTACIÓN DEL ENTORNO DE DESARROLLO Y DEL ENTORNO DE EXPLOTACIÓN</strong></p>
                             <a href="doc/EstudioTema2.pdf" class="btn btn-primary" target="_blank">Documentacion del cliente y servidor</a>
-                            <a  class="btn btn-primary" target="_blank">Estudio de clases y funciones</a>
+                            <a href="doc/EstudioClasesYFuncionesPHP.pdf" class="btn btn-primary" target="_blank">Estudio de clases y funciones</a>
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                     <div class="card mb-3">
                         <div class="card-body">
                             <p class="card-text">TEMA 6  <strong>PROGRAMACIÓN ORIENTADA A OBJETOS EN PHP</strong></p>
-                            
+
                         </div>
                     </div>
                 </div>
